--- a/Oop.ipynb
+++ b/Oop.ipynb
@@ -387,40 +387,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "f4bd54e5-77df-493a-aa3f-dfc5ceb6d8ec",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Student:\n",
+    "    department  = \"Computer science\"\n",
+    "    cordinator = \"Himanshu\"\n",
+    "    def __init__(self,nm,roll,college,city): \n",
+    "        self.name = nm \n",
+    "        self.roll_no = roll  \n",
+    "        self.college_name =  college \n",
+    "        self.college_city = city \n",
+    "\n",
+    "    #METHODS  instance variable  \n",
+    "    def display(self): \n",
+    "        print(self.name)\n",
+    "        print(self.roll_no)\n",
+    "        print(self.college_name)\n",
+    "        print(self.college_city)\n",
+    "    @classmethod    \n",
+    "    def display2(cls): \n",
+    "        print(cls.department)\n",
+    "        print(cls.cordinator)\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def display3(): \n",
+    "        print(\"hii i am static method\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "62971e88-5380-41c1-bed0-eab29cf79a28",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "obj1 = Student(nm=\"rahul\",roll=101,college='poornima',city='jaipur')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "29aa5e9d-103a-4835-a58f-b44d2ba25865",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'poornima'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj1.college_name"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "657725bb-3118-47a9-aeb8-6effdd700bc2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rahul\n",
+      "101\n",
+      "poornima\n",
+      "jaipur\n"
+     ]
+    }
+   ],
+   "source": [
+    "obj1.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "e2a9d5fe-1db5-466a-81ec-4e5067824211",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Student.display2() takes 0 positional arguments but 1 was given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[28], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mobj1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdisplay2\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m   \u001b[38;5;66;03m# class variable \u001b[39;00m\n",
+      "\u001b[1;31mTypeError\u001b[0m: Student.display2() takes 0 positional arguments but 1 was given"
+     ]
+    }
+   ],
+   "source": [
+    "obj1.display2()   # class variable "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "3b0b96c1-b2f9-449f-87a0-811bb2b03ca7",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Student.display2() missing 1 required positional argument: 'cls'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[22], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mStudent\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdisplay2\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: Student.display2() missing 1 required positional argument: 'cls'"
+     ]
+    }
+   ],
+   "source": [
+    "Student.display2()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2a9d5fe-1db5-466a-81ec-4e5067824211",
+   "id": "148933f8-c122-4385-bd8e-49b2bf391580",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5df058fa-491a-4837-9f84-18eca58a3fda",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -428,7 +555,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b0b96c1-b2f9-449f-87a0-811bb2b03ca7",
+   "id": "5cb28929-c483-4d54-9f79-6d7b464bd8b8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69bec76d-0bb4-4240-a0a7-61cb4dc6b33d",
    "metadata": {},
    "outputs": [],
    "source": []
